feat: add sliders for veille

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1140,7 +1140,8 @@
   <div class="bg-jaune relative group h-28">
     <h1 class="absolute text-8xl tracking-widest group-hover:opacity-10 opacity-100 font-swap ease-in-out transition-all z-0 right-0">DESIGN</h1>
     
-    <div class="flex gap-2 z-10 h-3/4 desktop:pt-3 overflow-x-scroll overflow-y-hidden whitespace-nowrap scroll-smooth">
+    <div class="logos w-full h-28">
+    <div class="z-10 h-3/4 desktop:pt-3 logos-slide">
       
       <div class="z-10 group/item relative">
         <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
@@ -1174,214 +1175,7 @@
         </div>
       </div>
 
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
+    </div>
     </div>
 
   </div>
@@ -1390,33 +1184,28 @@
   <div class="bg-jaune relative group h-28 mt-8">
     <h1 class="absolute text-8xl tracking-widest group-hover:opacity-10 opacity-100 font-swap ease-in-out transition-all z-0 right-0">DEVELOPPEMENT</h1>
     
-    <div class="flex gap-2 z-10 h-3/4  desktop:pt-4">
-      
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
+  <div class="logos">
+    <div class="logos-slide">
+      <img src="../assets/competences/3Dmax.png" alt="" class="h-28">
+      <img src="../assets/competences/adobe.png" alt="" class="h-28">
+      <img src="../assets/competences/Angular.png" alt="" class="h-28">
+      <img src="../assets/competences/Blender.png" alt="" class="h-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
     </div>
+    <div class="logos-slide">
+      <img src="../assets/competences/3Dmax.png" alt="" class="h-28">
+      <img src="../assets/competences/adobe.png" alt="" class="h-28">
+      <img src="../assets/competences/Angular.png" alt="" class="h-28">
+      <img src="../assets/competences/Blender.png" alt="" class="h-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+    </div>
+  </div>
 
   </div>
 
