feat: new sliders for veille (not finish)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1194,12 +1194,20 @@
       <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
       <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
       <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
     </div>
     <div class="logos-slide">
       <img src="../assets/competences/3Dmax.png" alt="" class="h-28">
       <img src="../assets/competences/adobe.png" alt="" class="h-28">
       <img src="../assets/competences/Angular.png" alt="" class="h-28">
       <img src="../assets/competences/Blender.png" alt="" class="h-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
       <img src="../assets/competences/chartjs.png" alt="" class="h-28">
       <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
       <img src="../assets/competences/DaVinci.png" alt="" class="h-28">
@@ -1213,33 +1221,41 @@
   <div class="bg-jaune relative group h-28 mt-8">
     <h1 class="absolute text-8xl tracking-widest group-hover:opacity-10 opacity-100 font-swap ease-in-out transition-all z-0 right-0">GESTION</h1>
     
-    <div class="flex gap-2 z-10 h-3/4 desktop:pt-4">
-      
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
-      <div class="z-10 group/item relative">
-        <img src="../assets/competences/DaVinci.png" alt="" class="h-full scale-100 ease-in-out transition-all group-hover/item:scale-50">
-        <div class="absolute z-20 w-full h-full top-0 bg-noir bg-opacity-60 border-2 border-blanc rounded-xl invisible group-hover/item:visible ease-in-out transition-all">
-          <h4 class="text-xs text-blanc desktop:mt-2 desktop:ml-1">DaVinci Resolve</h4>
-          <p><a href="" class="text-jaune text-sm hover:underline hover:animate-pulse">Découvrir</a></p>
-        </div>
-      </div>
-
+    <div class="flex overflow-hidden space-x-16 group">
+    <div class="flex space-x-16 animate-loop-scroll group-hover:paused">
+      <img src="../assets/competences/adobe.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/Angular.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/Blender.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/xd.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/wordpress.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/wix.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vuejs.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vscode.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vba.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/unreal.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/uikit.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/" alt="" class="h-28 w-28">
     </div>
+    <div class="flex space-x-16 animate-loop-scroll group-hover:paused" aria-hidden="true">
+      <img src="../assets/competences/adobe.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/Angular.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/Blender.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/chartjs.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/DaVinci.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/xd.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/wordpress.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/wix.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vuejs.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vscode.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/vba.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/unreal.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/uikit.png" alt="" class="h-28 w-28">
+      <img src="../assets/competences/" alt="" class="h-28 w-28">
+    </div>
+  </div>
+ 
 
   </div>
 
