--- a/src/app/home-component/home-component.component.scss
+++ b/src/app/home-component/home-component.component.scss
@@ -1,5 +1,5 @@
  /* CLOUDS */
-#cloud {
+ #cloud {
     animation: 5s cubic-bezier(0.1, 0.01, 0.1, 0.01)
                infinite alternate sky;
   }  
@@ -230,7 +230,7 @@ footer .wave {
     left: 0;
     width: 100%;
     height: 100px;
-    background: url(../assets/footer/wavefooter.png);
+    background: url(../../assets/footer/wavefooter.png);
     background-size: 1000px 100px;
 }
 
