feat: add all project (and component)

--- a/src/app/all-project-component/all-project-component.component.html
+++ b/src/app/all-project-component/all-project-component.component.html
@@ -5,13 +5,14 @@
     </div>
 
     <div class="grid gap-20">
+      <app-card-project [project]="projectiutNFCTV"/>
       <app-card-project [project]="projectEmorphoz"/>
-      <app-card-project [project]="projectEmorphoz"/>
-      <app-card-project [project]="projectEmorphoz"/>
-    </div>
-
-    <div class="flex justify-center mt-20">
-      <a routerLink="allProjects"><button class="bg-jaune py-3 px-12 border-noir border-2 rounded-xl hover:scale-105 text-blanc hover:text-noir hover:border-jaune hover:bg-opacity-40 ease-in-out transition-all">Voir Plus ...</button></a>
+      <app-card-project [project]="projectgoMatch"/>
+      <app-card-project [project]="projectcitadelle"/>
+      <app-card-project [project]="projectfooterWave"/>
+      <app-card-project [project]="projectStweaming"/>
+      <app-card-project [project]="projectTroisCentTeam"/>
+      <app-card-project [project]="projectProdSquad"/>
     </div>
 
   </section>
