--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -988,7 +988,7 @@
     <h1 class="text-jaune desktop:text-2xl text-center font-swap font-extralight mt-10 mb-20">Mes Projets</h1>
 
     <div class="grid gap-10">
-      <app-card-project [project]="projectEmorphoz"/>
+      <app-card-project [project]="projectiutNFCTV"/>
       <app-card-project [project]="projectEmorphoz"/>
     </div>
 
@@ -1016,7 +1016,7 @@
       <div class="desktop:flex phone:grid phone:grid-cols-2 desktop:gap-96">
         <div class="flex desktop:gap-28 desktop:mr-52 phone:col-span-2">
           <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">+999 lignes de codes</p>
-          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">8 clients</p>
+          <p class="animate-bounce text-center phone:text-xs desktop:text-base desktop:font-semibold">9 clients</p>
         </div>
         
         <div class="flex desktop:gap-28 phone:col-span-2">
