feat: add CV FR

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -123,7 +123,7 @@
 
 
           <div class="flex justify-center desktop:w-1/2 mt-4">
-          <a href="/Marwin-RODRIGUES_CV.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
+          <a href="../../assets/CV-FR-FD_Marwin-RODRIGUES.pdf" target="_blank"><button class="rounded-full border-2 border-jaune px-2 py-1 hover:bg-jaune hover:text-white hover:scale-110 duration-300">Voir mon CV</button></a>
           </div>
      
       </div>
