fix: correct Divonne-les-bains

--- a/src/app/home-component/home-component.component.html
+++ b/src/app/home-component/home-component.component.html
@@ -115,7 +115,7 @@
         <p class="desktop:text-3xs phone:text-5xs text-opacity-75 mt-4 w-10/12 phone:ml-2 desktop:ml-0">Fraichement Diplômé d’un BUT MMI à <a href="#"><span class="text-jaune hover:underline hover:animate-pulse"> MMI Montbéliard </span></a>, je possède une expertise en développement web, communication digital & print, UX/UI, et programmation de jeux vidéo. Déterminé à évoluer en tant que développeur front-end, mon objectif est d'atteindre le poste de directeur de projet web. Motivé et prêt à contribuer à des projets web de haut niveau.</p>
      
         <ul class="theme-list mt-5 phone:ml-2 desktop:ml-0">
-            <li><b>Réside:</b> Divonnes-les-bains, FR</li>
+            <li><b>Réside:</b> Divonne-les-bains, FR</li>
             <li><b>Age:</b> 23</li>
             <li><b>Né:</b> 19/03/2001</li>
             <li><b>Contact: </b> <a href="mailto:contact@marwin-rodrigues.fr" class="text-jaune hover:underline hover:animate-pulse">contact@marwin-rodrigues.fr</a></li>
